# EdgeFusion

./: .gitignore  CMakeLists.txt  README.md  deploy.sh  jetson_setup.sh
cmake/: aarch64-toolchain.cmake
src/: main.cpp
src/fusion/: ekf.cpp  ekf.hpp
src/ipc/: publisher.hpp  subscriber.hpp
src/telemetry/: imu_simulator.cpp  imu_simulator.hpp  latency_tracker.hpp
src/vision/: detector.hpp  gst_pipeline.cpp  gst_pipeline.hpp
